--- a/fido2-rp/src/main/resources/templates/index.html
+++ b/fido2-rp/src/main/resources/templates/index.html
@@ -40,7 +40,7 @@
 </nav>
 <div class="container">
   <br>
-  <h3>LINE Corp. WebAuthn Test Web</h3>
+  <h3>Test Registro y Autenticación WebAuthn</h3>
   <fieldset class="form-group">
     <legend class="col-form-label">
       <h4>User Information</h4>
